Fixed alignment classes

--- a/style.css
+++ b/style.css
@@ -203,15 +203,15 @@ nav ul li:hover > ul {
   float: right;
 }
 
-alignleft {
+.alignleft {
   float: left;
 }
 
-alignright {
+.alignright {
   float: right;
 }
 
-aligncenter {
+.aligncenter {
   margin-left: auto;
   margin-right: auto;
 }
